# Ojects-detection-System

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/825464869887841883/: meta.yaml
mlruns/825464869887841883/04a682eabac8489c8a47c9e448bb557a/: meta.yaml
mlruns/825464869887841883/6da6074f02c14bb9b3e673228af02579/: meta.yaml
mlruns/825464869887841883/6da6074f02c14bb9b3e673228af02579/tags/: mlflow.runName  mlflow.source.name
mlruns/825464869887841883/ac59f2ca144c4eb9a1e30a8b1d732701/: meta.yaml
mlruns/825464869887841883/ae24c331f3cd40a8b3b2c8e8d4d166aa/: meta.yaml
mlruns/825464869887841883/ae24c331f3cd40a8b3b2c8e8d4d166aa/params/: architecture
mlruns/825464869887841883/c1387c8f4ada427f825d19bc12df3d0f/: meta.yaml
reports/: data_analysis_report.html
scripts/: analyze_data.py  export_tflite.py  run_etl.py  train_model.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/application/: __init__.py  analysis_service.py  etl_service.py  prediction_service.py  training_service.py
src/core/: __init__.py  config.py  entities.py  interfaces.py
src/infrastructure/: __init__.py  data_loader.py  data_transformer.py  file_repository.py  mlflow_tracker.py  model_factory.py  tf_dataset.py  tf_trainer.py
